# anyrun-handlr

./: Cargo.toml  README.md  justfile
src/: completion.rs  lib.rs
