[package]
name = "handlr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
abi_stable = "0.11.2"
anyrun-plugin = { git = "https://github.com/Kirottu/anyrun", version = "0.1.0" }
miette = "5.10.0"
ron = "0.8.1"
rusqlite = "0.29.0"
serde = { version = "1.0.188", features = ["derive"] }
shellexpand = "3.1.0"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.17"
